--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,9 +12,9 @@ pageSize: 10
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3308/spring_batch
+    url: jdbc:mysql://localhost:3307/spring_batch
     username: root
-    password: root
+    password: 1234567
   batch:
     jdbc:
       initialize-schema: always
