--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,4 @@
-#spring.datasource.jdbcUrl=jdbc:mysql://localhost:3308/spring_batch # this jdbcUrl does not work the correct is url
+#spring.datasource.jdbcUrl=jdbc:mysql://localhost:3308/spring_batch
 #spring.datasource.username=root
 #spring.datasource.password=root
 #spring.mvc.pathmatch.matching-strategy=ant-path-matcher
@@ -12,9 +12,14 @@ pageSize: 10
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3307/spring_batch
+    jdbcUrl: jdbc:mysql://localhost:3307/spring_batch
     username: root
     password: 1234567
   batch:
     jdbc:
       initialize-schema: always
+app:
+  datasource:
+    jdbcUrl: jdbc:mysql://localhost:3307/app
+    username: root
+    password: 1234567
